test/negative/struct_ref_field_list.mut
# ERROR: struct fields cannot be reference types (List is a ref type)
struct Container
    items: List[i64]
    count: i64
end
